workspace = { members = ["crates/viewer"] }
[package]
name = "customer_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
csv = "1.3.0"
datafusion = "36.0.0"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
