workspace = { members = [ "crates/graph","crates/viewer"] }
[package]
name = "customer_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = { version = "0.4", features = ["wasmbind"] }
datafusion = { version = "37.0.0", default-features = false }
datafusion-expr = { version = "37.0.0", default-features = false }
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.8", features = ["js"] }
wasm-bindgen-futures = "0.4.42"
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
log = "0.4.21"
async-trait = "0.1.79"
csv = "1.3.0"
gauntlet = { path = "../gauntlet" }
data-viewer = { path = "../data-viewer" }
sauron = { path = "../sauron" }
thiserror = "1.0.58"


[patch.crates-io]
arrow = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git", default-features = false }
arrow-arith = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-array = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-buffer = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-cast = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-csv = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-data = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-ipc = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-json = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-ord = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-row = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-schema = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-select = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-string = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }

