workspace = { members = [ "crates/customer", "crates/graph", "crates/map","crates/viewer"] }
[package]
name = "customer_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
customer = { path = "crates/customer" }
anyhow = "1.0.81"
tokio = { version = "1.37.0", features = ["full"] }
gauntlet = { path = "../gauntlet" }


[patch.crates-io]
arrow = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git", default-features = false }
arrow-arith = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-array = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-buffer = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-cast = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-csv = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-data = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-ipc = { version = "51.0.0",  git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-json = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-ord = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-row = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git"}
arrow-schema = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-select = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
arrow-string = { version = "51.0.0", git = "https://github.com/ivanceras/arrow-rs.git" }
