[package]
name = "customer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
log = "0.4.21"
csv = "1.3.0"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
gauntlet = { path = "../../../gauntlet" }
thiserror = "1.0.58"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
