[package]
name = "viewer"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
datafusion = { version = "37.0.0", default-features = false }
datafusion-expr = { version = "37.0.0", default-features = false }
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.8", features = ["js"] }
wasm-bindgen-futures = "0.4.42"
chrono = { version = "0.4", features = ["wasmbind"] }
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
log = "0.4.21"
async-trait = "0.1.79"
anyhow = "1.0.81"
csv = "1.3.0"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
