[package]
name = "viewer"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
customer = { path = "../customer" }
console_log = { version = "1.0.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
log = "0.4.21"
gauntlet = { path = "../../../gauntlet" }
data-viewer = { path = "../../../data-viewer" }
sauron = { path = "../../../sauron" }




[package.metadata.wasm-pack.profile.release]
wasm-opt = false
